--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "ws": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/parser": "^7.0.0-beta.55",
     "babel-loader": "^7.1.5",
-    "babylon": "^6.18.0",
     "body-parser": "^1.18.2",
-    "crypto-js": "^3.1.9-1",
     "eslint": "5.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
@@ -72,10 +71,12 @@
     "jsonrpc"
   ],
   "author": "aionnetwork",
-  "authors": [{
-    "name": "chris",
-    "email": "aion.6368726973@gmail.com",
-    "url": "https://github.com/aion-6368726973"
-  }],
+  "authors": [
+    {
+      "name": "chris",
+      "email": "aion.6368726973@gmail.com",
+      "url": "https://github.com/aion-6368726973"
+    }
+  ],
   "license": "LGPL-3.0"
 }
