--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "clean": "rm -rf dist .eslintcache",
     "setup-dist": "mkdir -p dist",
     "dev-server": "nodemon -L -d 1 -w test/unit/fixtures/rpc.js -w test/unit/server.js test/unit/server.js || true",
-    "dev-eslint": "sleep 1 && nodemon -L -d 1 -w src -w test --exec 'eslint --cache src test' || true",
-    "dev-mocha": "sleep 2 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/unit' || true",
+    "dev-eslint": "sleep 1 && nodemon -L -d 1 -w src -w test --exec 'eslint --cache --fix src test' || true",
+    "dev-mocha-unit": "sleep 2 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/unit' || true",
+    "dev-mocha-integration": "sleep 3 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/integration' || true",
     "dev": "run-p dev-*",
-    "test-eslint": "eslint src test || true",
-    "test-mocha": "mocha --opts mocha.opts test/unit",
+    "test-eslint": "eslint --fix src test || true",
+    "test-mocha-unit": "mocha --opts mocha.opts test/unit",
     "test": "run-s test-*",
     "prd-prettier": "prettier --config prettier.config.js --write './{src,test}/**/*.js'",
     "prd-webpack": "webpack --config webpack.config.js",
@@ -71,12 +72,10 @@
     "jsonrpc"
   ],
   "author": "aionnetwork",
-  "authors": [
-    {
-      "name": "chris",
-      "email": "aion.6368726973@gmail.com",
-      "url": "https://github.com/aion-6368726973"
-    }
-  ],
+  "authors": [{
+    "name": "chris",
+    "email": "aion.6368726973@gmail.com",
+    "url": "https://github.com/aion-6368726973"
+  }],
   "license": "LGPL-3.0"
 }
