--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "underscore": "^1.8.3",
     "utf8": "^3.0.0",
     "uuid": "^3.2.1",
-    "webpack": "^4.16.1",
     "ws": "^6.0.0"
   },
   "devDependencies": {
@@ -40,7 +39,8 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "should": "^13.2.1",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack": "^4.16.1"
   },
   "scripts": {
     "clean": "rm -rf dist .eslintcache",
@@ -48,7 +48,7 @@
     "dev-server": "nodemon -L -d 1 -w test/unit/fixtures/rpc.js -w test/unit/server.js test/unit/server.js || true",
     "dev-eslint": "sleep 1 && nodemon -L -d 1 -w src -w test --exec 'eslint --cache --fix src test' || true",
     "dev-mocha-unit": "sleep 2 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/unit' || true",
-    "dev-mocha-integration": "sleep 3 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/integration' || true",
+    "xdev-mocha-integration": "sleep 3 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/integration' || true",
     "dev": "run-p dev-*",
     "test-eslint": "eslint --fix src test || true",
     "test-mocha-unit": "mocha --opts mocha.opts test/unit",
@@ -72,10 +72,12 @@
     "jsonrpc"
   ],
   "author": "aionnetwork",
-  "authors": [{
-    "name": "chris",
-    "email": "aion.6368726973@gmail.com",
-    "url": "https://github.com/aion-6368726973"
-  }],
+  "authors": [
+    {
+      "name": "chris",
+      "email": "aion.6368726973@gmail.com",
+      "url": "https://github.com/aion-6368726973"
+    }
+  ],
   "license": "LGPL-3.0"
 }
