istanbul nyc excludes include tools dir for docgen

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@ node_modules
 *.sublime-*
 .eslintcache
 
+# istanbul nyc
+.nyc_output
+coverage
+
 # before we goto production take this out
 dist
 
 # temporary files
 tmp*
 backup
-tools
 todo.md
