Revert "Merge branch 'aion-web3-v1-transition' into aion-web3-v1-transition"
This reverts commit e6dd8b757c2dc31b8dbe41e5401d5ba3330b9279, reversing
changes made to 9fa27f72ce86d86104213a224a9122342fde798b.

--- a/package.json
+++ b/package.json
@@ -85,12 +85,12 @@
     "dev-mocha-unit": "sleep 2 && nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/unit' || true",
     "dev": "run-p dev-*",
     "test-eslint": "eslint --fix src test || true",
-    "test-mocha-unit": "STOP_SERVER=1 mocha --opts mocha.opts --require test/unit/server.js test/unit",
+    "test-mocha-unit": "mocha --opts mocha.opts test/unit",
     "test": "run-s test-*",
     "coverage": "nyc --reporter=html --reporter=json --report-dir=coverage --include=src --preserve-comments --instrument npm test",
     "integration-node-mocha": "nodemon -L -d 2 -w src -w test --exec 'mocha --opts mocha.opts test/integration' || true",
     "integration": "run-s integration-*",
-    "prd-prettier": "prettier --config prettier.config.js --write './{src,test,tools}/**/*.js'",
+    "prd-prettier": "prettier --config prettier.config.js --write './{src,test}/**/*.js'",
     "prd-webpack": "webpack --config webpack.config.js",
     "prd-docs": "node tools/docgen/index.js",
     "prd": "run-s clean setup-* test-* prd-*"
